--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>[Dev Miles] — Technicien Informatique Junior</title>
+  <title>[Dev Miles] — Technicien Informatique</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://unpkg.com/three@0.152.2/build/three.min.js"></script>
 </head>
@@ -202,7 +202,7 @@
     <div class="container footer-grid">
       <div>
         <strong>[Dev Miles]</strong>
-        <p>Technicien Informatique Junior</p>
+        <p>Technicien Informatique </p>
       </div>
       <div>
         <p>Email : Ludovictetmoun@gmail.com</p>
@@ -215,4 +215,5 @@
   <script src="script.js" defer></script>
 
 </body>
+
 </html>
