Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="hero-content container">
       <div class="hero-card glass">
         <h1>[Dev Miles]</h1>
-        <p class="subtitle">Technicien Informatique Junior — Développement Web & Maintenance</p>
+        <p class="subtitle">Technicien Informatique — Développement Web & Maintenance</p>
         <p class="hero-cta">
           Compétences : HTML • CSS • JavaScript • Python • Maintenance hardware & software
         </p>
@@ -217,3 +217,4 @@
 </body>
 
 </html>
+
